--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
           <p>All in pink</p>
         </div>
         <div style="background-color: rgb(39, 99, 162)">
-          <h1>Blue mountains</h1>
-          <p>Old and great</p>
+          <h1>Blue sky</h1>
+          <p>Great air</p>
         </div>
         <div style="background-color: rgb(15, 15, 16)">
           <h1>Mystic castle</h1>
-          <p>Old magic inside</p>
+          <p>Old magic</p>
         </div>
         <div style="background-color: rgb(220, 152, 16)">
           <h1>Flying eagle</h1>
-          <p>Living under the sand</p>
+          <p>Sand under</p>
         </div>
       </div>
       <div class="right-slide">
